---
title: Diagrama de Classes (UML) — Prontuário, Anamnese, NPS, Termos, Acesso e Auditoria
---
classDiagram
    direction LR

    class Cliente {
        «ref» núcleo de agendamento
    }
    class Atendimento {
        «ref» núcleo de agendamento
    }
    class Procedimento {
        «ref» núcleo de agendamento
    }

    class Prontuario {
        +alergias: Text
        +contraindicacoes: Text
        +historico_saude: Text
        +medicamentos_uso: Text
        +observacoes_gerais: Text
        +respostas_extras: JSONB «objeto»
    }
    class ProntuarioVersao {
        +dados: JSON «foto anterior»
        +autor_nome: CharField
        +criado_em: DateTime
        «append-only, imutável por trigger»
        +registrar(prontuario, usuario)
    }
    class AnotacaoSessao {
        +texto: Text
        +autor_nome: CharField
        +criado_em: DateTime
    }
    class FormularioAnamnese {
        +nome: CharField
        +tipo: ANAMNESE|PESQUISA
        +escopo: GLOBAL|CATEGORIA|PROCEDIMENTO|MODALIDADE
        +schema_json: JSON «lista»
        +obrigatorio: Boolean
    }
    class RespostaAnamnese {
        +token: CharField «único, 60 dias»
        +respostas_json: JSON «objeto»
        +respondida_em: DateTime
    }
    class AvaliacaoNPS {
        +nota: 0..10 «CHECK»
        +comentario: Text
        +autoriza_publicacao: Boolean «opt-in»
        +aprovado_publicacao: Boolean «moderação»
        +alerta_enviado: Boolean
    }
    class ListaEspera {
        +data_desejada: Date
        +turno_desejado: MANHA|TARDE|NOITE
        +email_contato: EmailField
        +notificado: Boolean
    }
    class Usuario {
        +papel: ADMIN|PROFISSIONAL|RECEPCAO
        +email: «USERNAME_FIELD»
        +ativo: Boolean
        +is_staff: papel == ADMIN
    }
    class CodigoOtp {
        +telefone: CharField
        +codigo_hash: HMAC-SHA256
        +proposito: AGENDAMENTO|LOGIN_CLIENTE|DSAR
        +expira_em: DateTime «10 min»
        +tentativas: 0..5
        +gerar() verificar()
    }
    class VersaoTermo {
        +tipo: LGPD|PROCEDIMENTO
        +titulo / conteudo / versao
        +vigente_desde: Date
        +ativa: Boolean «1 ativa por escopo»
        «imutável após o 1º aceite»
        +lgpd_vigente()
    }
    class AceiteTermo {
        +ip: GenericIP
        +user_agent: CharField
        +conteudo_sha256: CharField
        +criado_em: DateTime
        «prova legal, imutável por trigger»
        +registrar(cliente, versao, request, atendimento)
    }
    class LogAuditoria {
        +usuario_nome: CharField «snapshot»
        +acao: Text
        +tabela / registro_id
        +detalhes: JSON «PII mascarada»
        +ip_origem: GenericIP
    }
    class AssinaturaPush {
        +endpoint: URL «único»
        +p256dh / auth: VAPID
        +ativo: Boolean
    }

    Cliente "1" --> "0..1" Prontuario : O2O (PROTECT)
    Prontuario "1" --> "0..*" ProntuarioVersao : versoes
    Usuario "0..1" --> "0..*" ProntuarioVersao : autor
    Cliente "1" --> "0..*" RespostaAnamnese
    FormularioAnamnese "1" --> "0..*" RespostaAnamnese
    Atendimento "0..1" --> "0..*" RespostaAnamnese
    Atendimento "1" --> "0..*" AnotacaoSessao : anotacoes
    Usuario "0..1" --> "0..*" AnotacaoSessao : autor (PROTECT)
    Atendimento "1" --> "0..1" AvaliacaoNPS : O2O
    Cliente "1" --> "0..*" ListaEspera
    Usuario "0..1" --> "0..1" Profissional : O2O
    Cliente "1" --> "0..*" AceiteTermo : aceites (PROTECT)
    VersaoTermo "1" --> "0..*" AceiteTermo
    Atendimento "0..1" --> "0..*" AceiteTermo
    Procedimento "0..1" --> "0..*" VersaoTermo
    Usuario "0..1" --> "0..*" LogAuditoria
    Usuario "1" --> "0..*" AssinaturaPush

    class Profissional {
        «ref» núcleo de agendamento
    }
